--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -95,7 +95,7 @@
           {% endif %}
           
           {% if question.image %}
-						<img src="https://br.asker.fun/media/questions/RWZFF2PPUQmensagem-101.jpg" class="popular-question-img">
+						<img src="{{ question.image.url }}" class="popular-question-img">
 						<br>
           {% endif %}
           
