Explicando melhor como ganhar pontos.

--- a/main_app/templates/rank.html
+++ b/main_app/templates/rank.html
@@ -91,6 +91,7 @@
 						<li>Responder - 2 pontos por resposta</li>
 						<li>Perguntar - 1 ponto por pergunta</li>
 					</ul>
+					<p>Você também ganha 10 pontos ao receber melhor resposta e 2 ao dar melhor resposta 🏆</p>
 				</div>
 			</div>
 		</main>
