Status visto por último (ainda em construção)

--- a/main_app/templates/delete-account.html
+++ b/main_app/templates/delete-account.html
@@ -63,5 +63,19 @@
 		</script>
 		
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script>
+	/* script para mandar confirmação de online para o servidor a cada x segundos. */
+	/* a confirmação é enviada via ajax. */
+	/* é recomendado colocar este script em todas as páginas, menos na página de login ou */
+	/* de criar conta, por exemplo. */
+	setInterval(function() {
+		$.ajax({
+			url: "/i-am-online",
+			type: "get",
+		});
+	}, 30000);
+</script>
+
 	</body>
 </html>
