--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -138,5 +138,17 @@ if (getDarkCookie() == 'true') {
 </script>
 <script src="/static/js/general_functions.js?version=2"></script>
 
+{% if user.is_authenticated %}
+	<script>
+		/* Este script manda a última hora que o usuário logado atual foi visto online. Ele é enviado a cada x segundos. */
+		setInterval(function() {
+			$.ajax({
+				url: "/i-am-online",
+				type: "get",
+			});
+		}, 30000);
+	</script>
+{% endif %}
+
 </body>
 </html>
