--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -130,17 +130,9 @@ if (getDarkCookie() == 'true') {
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-{% if user.is_authenticated %}
-	<script>
-		/* Este script manda a última hora que o usuário logado atual foi visto online. Ele é enviado a cada x segundos. */
-		setInterval(function() {
-			$.ajax({
-				url: "/i-am-online",
-				type: "get",
-			});
-		}, 30000);
-	</script>
-{% endif %}
+<!-- Info Links ads -->
+<script type="text/javascript"> var infolinks_pid = 3334159; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+<!-- !Info Links ads -->
 
 	</body>
 </html>
