--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -6,6 +6,10 @@
 <title>Asker | Página inicial</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<meta name="description" content="Faça e responda perguntas na melhor e mais divertida comunidade de perguntas e respostas!">
+<meta name="keywords" content="br.asker.fun, asker.fun, perguntas, respostas, asker">
+
 <style id="wait">
 	body {
 		visibility: hidden;
@@ -13,7 +17,7 @@
 	}
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/common.css?v=3">
+<link rel="stylesheet" href="/static/css/common.css?v=3.25">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
 	var cssfn = 'light.css';
@@ -60,10 +64,10 @@
 		
 		<ul class="nav nav-tabs" id="tabs">
 			<li class="nav-item">
-				<span class="nav-link main-tab bg-main-tab" id="popular">Popular</span>
+				<span class="nav-link bg-main-tab" id="popular">Popular</span>
 			</li>
 			<li class="nav-item">
-				<span class="nav-link main-tab bg-main-tab" id="news">Novas perguntas</span>
+				<span class="nav-link bg-main-tab" id="news">Novas perguntas</span>
 			</li>
 		</ul>
 <!-- Questões recentes -->
@@ -82,8 +86,6 @@
 </section>
 <!-- !Questões populares -->
 	</main>
-
-		<script src="/static/js/index.js?v=9"></script>
 		<script>
 if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.remove("navbar-light");
@@ -130,6 +132,8 @@ if (getDarkCookie() == 'true') {
 		});
 	}
 </script>
+
+<script src="/static/js/index.js?v=9.16"></script>
 
 	</body>
 </html>
