--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -17,7 +17,7 @@
 	}
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/common.css?v=3.25">
+<link rel="stylesheet" href="/static/css/common.css?v=3.28">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
 	var cssfn = 'light.css';
@@ -52,16 +52,6 @@
 	{% include "includes/navbar.html" %}
 	{{ account_verification_alert|safe }}
 	<main>
-		
-		{% if request.META.HTTP_HOST == "asker.pythonanywhere.com" %}
-			<div class="alert alert-success">
-				<div class="alert-heading">
-					<h3>Aviso!</h3>
-				</div>
-				<p>O Asker está agora disponível no domínio <a href="https://br.asker.fun">br.asker.fun</a>. Ou, mais fácil: <a href="http://asker.fun">asker.fun</a></p>
-			</div>
-		{% endif %}
-		
 		<ul class="nav nav-tabs" id="tabs">
 			<li class="nav-item">
 				<span class="nav-link bg-main-tab" id="popular">Popular</span>
@@ -133,7 +123,104 @@ if (getDarkCookie() == 'true') {
 	}
 </script>
 
-<script src="/static/js/index.js?v=9.16"></script>
+<script>
+	var csrf_token = "{{ csrf_token }}";
+</script>
+
+<script src="/static/js/index.js?v=9.19"></script>
+
+
+<!-- Estilização do campo de responder perguntas. -->
+<style>
+	.campo-responder-pergunta .botao-mostrar-ou-ocultar-formulario a {
+		color: #007bff;
+	}
+	
+	.botao-mostrar-ou-ocultar-formulario {
+		cursor: pointer;
+	}
+	
+	.icone-carregando img {
+		max-width: 5%;
+		display: none;
+	}
+	
+	.formulario-responder-pergunta {
+		display: none;
+	}
+</style>
+
+
+<!-- JavaScript necessário no final da página (index.html). -->
+<script>
+	/* Adiciona, em cada pergunta, o formulário. */
+	campo_perguntas = document.getElementsByClassName("form-responder-pergunta");
+	
+	for (let index in campo_perguntas) {
+		
+		try {
+			question_id = campo_perguntas[index].dataset["questionid"];
+		} catch {
+		}
+		
+		campo_perguntas[index].innerHTML += `
+<div class="campo-responder-pergunta">
+	<div class="botao-mostrar-ou-ocultar-formulario" onclick="mostrar_formulario_de_resposta(this.nextElementSibling.getElementsByTagName('form')[0]);">
+		<a>responder</a>
+		<i class="far fa-edit"></i>
+	</div>
+	
+	<div>
+		<form class="formulario-responder-pergunta" onsubmit="enviar_resposta(this); return false;">
+			<input type="hidden" name="csrfmiddlewaretoken" value="`+csrf_token+`">
+			<input name="question_id" type="hidden" value="`+question_id+`">
+			<textarea name="text" maxlength="5000" class="form-control form-control-sm" placeholder="Sua resposta" required></textarea>
+			<button type="submit" class="btn btn-outline-primary btn-sm">
+				<i class="far fa-paper-plane"></i>
+				Enviar
+			</button>
+		</form>
+	</div>
+	
+	<div class="icone-carregando">
+		<img src="/static/images/loading.gif">
+	</div>
+</div>
+`;
+	}
+	
+	function mostrar_formulario_de_resposta(form) {
+		$(form).toggle(150);
+	}
+	
+	function enviar_resposta(form) {
+		/* Ativa ícone de carregamento: */
+		form.style.display = "none";
+		form.parentElement.nextElementSibling.getElementsByTagName("img")[0].style.display = "block";
+		
+		$.ajax({
+			url: "save_answer",
+			type: "post",
+			data: $(form).serialize(),
+			complete: function() {
+				
+				form.parentElement.parentElement.style.display = "none";
+				
+				new_html = `
+<div>
+	<hr>
+	<p>
+		<font color="black">Sua resposta:</font><br>
+		`+form.text.value+`
+	</p>
+</div>
+`
+				
+				form.parentElement.parentElement.parentElement.parentElement.innerHTML += new_html;
+			}
+		});
+	}
+</script>
 
 	</body>
 </html>
