--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -6,11 +6,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<link rel="stylesheet" href="/static/css/common.css?v=3">
+<link rel="stylesheet" href="/static/css/common.css?v=5">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
 	var cssfn = 'light.css';
-	var cssversion = '?v=3';
+	var cssversion = '?v=4';
 	if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
 	var link = document.createElement('link');
 	link.id = 'theme-css';
@@ -94,7 +94,7 @@
 
 		<hr>
 		<h2>Layout</h2>
-		<input id="dark-mode" type="checkbox" name="dark-mode" /> <label class="inline" for="dark-mode"> Ativar modo escuro para este dispositivo (beta)</label><br>
+		<input id="dark-mode" type="checkbox" name="dark-mode" /> <label class="inline" for="dark-mode"> Ativar modo escuro para este dispositivo</label><br>
 
 		{% if user.username == user_p.user.username %}
 		<hr>
