--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -13,11 +13,12 @@
 		</style>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
+		<link rel="stylesheet" href="/static/css/common.css?v=5">
 		<script src="/static/js/cookieman.js?v=1"></script>
 		<script>
-			var cssfn = 'notification.css';
-			var cssversion = '?v=2';
-			if (getDarkCookie() == 'true') { cssfn = 'notification-d.css';}
+			var cssfn = 'light.css';
+			var cssversion = '?v=4';
+			if (getDarkCookie() == 'true') { cssfn = 'dark.css'; }
 			var link = document.createElement('link');
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
@@ -35,13 +36,13 @@
 
     <body>
 		{% include "includes/navbar.html" %}
-        <section class="card notifications bg-main">
+        <main><section class="card notifications bg-main">
             <ul class="list-group list-group-flush">
             	{% for notification in notifications %}
                 <!--<li class="list-group-item bg-main notif" style="background-color: {% if not notification.read %}#f7f7f7;{% endif %}">-->
                 <li class="list-group-item bg-main notif">
 	                <div class="card-body">
-	                    <p class="ntime">{% fix_naturaltime notification.creation_date|naturaltime %}</p>
+	                    <p class="ntime light-text">{% fix_naturaltime notification.creation_date|naturaltime %}</p>
 	                    <p class="ntext">{{ notification.text|safe }}</p>
                     </div>
                 </li>
@@ -55,7 +56,7 @@
             	<a class="page-btn btn btn-primary" style="flex: 1;" href="/notifications?page={{ notifications.previous_page_number }}">Mais recentes</a>
             	{% endif %}
             </div>
-        </section>
+        </section></main>
 		<script>
 if (getDarkCookie() == 'true') {
 	document.getElementsByClassName('navbar')[0].classList.add("navbar-dark");
