--- a/static/css/light.css
+++ b/static/css/light.css
@@ -22,4 +22,7 @@
   background-color: rgba(0, 0, 0, .03) !important;
   color: #212529;
 }
+.small-text, .light-text {
+    color: #888;
+}
 /* General */
