--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="asker, asker.fun, perguntar">
 <meta name="description" content="Faça uma pergunta no Asker.fun">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/common.css?v=3">
+<link rel="stylesheet" href="/static/css/common.css?v=6">
 <script src="/static/js/cookieman.js?v=1"></script>
 <script>
 	var cssfn = 'light.css';
@@ -42,7 +42,7 @@
 				{% csrf_token %}
 				<div class="form-group ask-form">
 					<input class="form-control" type="text" name="question" placeholder="Sua pergunta aqui" autocomplete="off" maxlength="180">
-					<textarea maxlength="5000" class="form-control" placeholder="Descrição (opcional)" name="description"></textarea>
+					<textarea width="100px" maxlength="5000" class="form-control" placeholder="Descrição (opcional)" name="description" style="height: 10em"></textarea>
 					<label for="image">Imagem</label>
 					<input type="file" class="form-control-file" id="image" name="file" onclick="return veracity_test({{ user_p.total_points }}, {% MINIMUM_POINTS_FOR_POSTING_IMAGES %});">
 
@@ -78,7 +78,7 @@
 		<footer>
 			<p>
 				Email de suporte:
-				<a href="mailto:minha.ccontta@gmail.com">minha.ccontta@gmail.com</a>
+				<a href="mailto:minha.ccontta@gmail.com">mail.asker.fun@gmail.com</a>
 			</p>
 		</footer>
 {{ error|safe }}
