anúncios para PC (não mobile)

--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -75,6 +75,13 @@
 			</form>
 		</div>
 		
+		{% if not is_mobile %}
+			<div class="adsterra-ads">
+				<script async="async" data-cfasync="false" src="//pl16405437.alternativecpmgate.com/a5a82325576f4300f3eeba835c04e59a/invoke.js"></script>
+				<div id="container-a5a82325576f4300f3eeba835c04e59a"></div>
+			</div>
+		{% endif %}
+		
 		<footer>
 			<p>
 				Email de suporte:
