email de suporte atualizado

--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -85,7 +85,7 @@
 		<footer>
 			<p>
 				Email de suporte:
-				<a href="mailto:minha.ccontta@gmail.com">mail.asker.fun@gmail.com</a>
+				<a href="mailto:mail.asker.fun@gmail.com">mail.asker.fun@gmail.com</a>
 			</p>
 		</footer>
 {{ error|safe }}
