--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -56,7 +56,7 @@
 			{% if user_p.user.username == "Erick" %}<p id="bio">{{ user_p.bio|safe }}</p>{% else %}
 			<p id="bio">{{ user_p.bio|linebreaksbr }}</p>{% endif %}
 			<hr>
-			<p>No Asker desde <span class="font-italic">{{ user_p.user.date_joined.date }}.</span></p>
+			<p>No <img src="/static/images/asker.png" alt="Asker" style="width: 3.1em; display: inline; margin-left: 0.2em; margin-right: 0.2em; margin-bottom: 0.2em"> desde <span class="font-italic">{{ user_p.user.date_joined.date }}.</span></p>
 			<hr>
 		</center>
 		<div class="card-group">
