--- a/main_app/templates/base/popular-questions.html
+++ b/main_app/templates/base/popular-questions.html
@@ -18,7 +18,7 @@
 					</p>
 				{% endif %}
 				
-				<div class="recent-question-info">
+				<div class="text-muted recent-question-info">
 					<span><span class="response-counter" data-iddapergunta="{{ question.id }}">{% total_answers question.id %}</span> resp.</span>
 					<span>&nbsp;&middot;&nbsp;</span>
 					<span>perguntado {% fix_naturaltime question.pub_date|naturaltime %}</span>
