--- a/main_app/templates/base/recent-questions.html
+++ b/main_app/templates/base/recent-questions.html
@@ -1,9 +1,3 @@
-<!--
-	Este documento HTML misturado com linguagem de template do Django
-	retorna um número n de perguntas que ficam na página inicial
-	na página "Novas perguntas".
--->
-
 {% load main_app_extras %}
 {% load humanize %}
 <ul class="list-group list-group-flush">
@@ -24,7 +18,7 @@
 					</p>
 				{% endif %}
 				
-				<div class="recent-question-info">
+				<div class="text-muted recent-question-info">
 					<span><span class="response-counter" data-iddapergunta="{{ question.id }}">{% total_answers question.id %}</span> resp.</span>
 					<span>&nbsp;&middot;&nbsp;</span>
 					<span>perguntado {% fix_naturaltime question.pub_date|naturaltime %}</span>
