--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -46,6 +46,9 @@
 }
 </style>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+	var csrf_token = "{{ csrf_token }}";
+</script>
 </head>
 
 	<body>
@@ -61,13 +64,16 @@
 			</li>
 		</ul>
 <!-- Questões recentes -->
-<section class="card bg-main" id="n_questions">
-{% include "base/recent-questions.html" %}
+<section class="card bg-main" id="n_questions" style="display: none">
+	<ul class="list-group list-group-flush" id="n_questions-list" style="display: none">
+	</ul>
+	
+	<a class="btn btn-outline-primary" href="/news?page={{ questions.next_page_number }}">Próxima página</a>
 </section>
 <!-- !Questões recentes -->
 
 <!-- Questões populares -->
-<section class="card bg-main" id="p_questions">
+<section class="card bg-main" id="p_questions" style="display: none">
 	<ul class="list-group list-group-flush infinite-container" id="popular-questions-ul">
 		{% include "base/popular-questions.html" %}
 	</ul>
@@ -87,7 +93,9 @@ if (getDarkCookie() == 'true') {
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
-<script src="/static/js/index.js?v=10"></script>
-
+<script>
+	recent_questions = [{% for q in questions %}{"id":{{ q.id }},"text":"{{ q.text }}","description":`{% format_question_description_for_json q.description %}`,"pub_date":"{% fix_naturaltime q.pub_date|naturaltime %}","total_answers":{% total_answers q.id %}, "user_response": `{% answer user.username q.id %}`},{% endfor %}];
+</script>
+<script src="/static/js/index.js?v=11"></script>
 	</body>
 </html>
