--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -65,7 +65,7 @@ var csrf_token = "{{ csrf_token }}";
 		</ul>
 <!-- Questões recentes -->
 <section class="card bg-main" id="n_questions" style="display: none">
-	<ul class="list-group list-group-flush" id="n_questions-list" style="display: none">
+	<ul class="list-group list-group-flush" id="n_questions-list">
 	</ul>
 	
 	<a class="btn btn-outline-primary" href="/news?page={{ questions.next_page_number }}">Próxima página</a>
@@ -74,8 +74,7 @@ var csrf_token = "{{ csrf_token }}";
 
 <!-- Questões populares -->
 <section class="card bg-main" id="p_questions" style="display: none">
-	<ul class="list-group list-group-flush infinite-container" id="popular-questions-ul">
-		{% include "base/popular-questions.html" %}
+	<ul class="list-group list-group-flush infinite-container" id="p_questions-list">
 	</ul>
 	
 	<div class="end">
@@ -87,9 +86,10 @@ var csrf_token = "{{ csrf_token }}";
 
 <script>
 recent_questions=[{% for q in questions %}{"id":{{ q.id }},"text":"{{ q.text }}","description":`{% format_question_description_for_json q.description %}`,"pub_date":"{% fix_naturaltime q.pub_date|naturaltime %}","total_answers":{% total_answers q.id %},"user_response":`{% answer user.username q.id %}`},{% endfor %}];
+popular_questions=[{% for q in popular_questions %}{"id":{{ q.id }},"text":"{{ q.text }}","description":`{% format_question_description_for_json q.description %}`,"pub_date":"{% fix_naturaltime q.pub_date|naturaltime %}","total_answers":{% total_answers q.id %},"user_response":`{% answer user.username q.id %}`},{% endfor %}];
 </script>
 
-<script src="/static/js/index.js?v=11.2"></script>
+<script src="/static/js/index.js?v=12"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
