--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -45,6 +45,7 @@
 	}
 }
 </style>
+<script data-ad-client="ca-pub-4483250714447468" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 var csrf_token = "{{ csrf_token }}";
