--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -69,7 +69,9 @@ recent_questions=[{% for q in questions %}{"id":{{ q.id }},"text":"{{ q.text }}"
 popular_questions=[{% for q in popular_questions %}{"id":{{ q.id }},"text":"{{ q.text }}","description":`{% format_question_description_for_json q.description %}`,"pub_date":"{% fix_naturaltime q.pub_date|naturaltime %}","total_answers":{% total_answers q.id %},"user_response":`{% answer user.username q.id %}`},{% endfor %}];
 </script>
 
-<script src="/static/js/index.js?v=22"></script>
+<script src="/static/js/linkify/linkify.min.js"></script>
+<script src="/static/js/linkify/linkify-jquery.min.js"></script>
+<script src="/static/js/index.js?v=22.2"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 	</body>
