--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -85,7 +85,7 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
 					<h3>{{ question.text }}</h3>
 					{% if question.description != '' %}
 					<hr>
-					<p>{{ question.description|cut_description|safe|linebreaksbr }}</p>
+					<p class="q-description">{{ question.description|cut_description|safe|linebreaksbr }}</p>
 					{% endif %}
 
 					{% if question.get_embedded_content %}
@@ -232,7 +232,9 @@ function delete_response(response_button_dom_el,response_id){if(confirm('Opa! Vo
 
 	</main>
 
-<script src="/static/js/question.js?v=13"></script>
+<script src="/static/js/linkify/linkify.min.js"></script>
+<script src="/static/js/linkify/linkify-jquery.min.js"></script>
+<script src="/static/js/question.js?v=13.1"></script>
 <script>
 var formbgcolor='bg-white'; var bgcolor='bg-white'; var textcolor='text-dark';
 var commentformbgcolor='bg-white'; var commentbgcolor='bg-light';
